# KSIC

./: .gitignore  README.md  pyproject.toml  requirements.txt
DataGenerationMatlab/: README.md
configs/: dataset_generation_2d.yaml  dataset_generation_3d.yaml  dataset_generation_3d_old.yaml  defineCtrlParams.m  defineSysParams.m  sensor_cases.yaml  vision_cases.yaml
entrypoints/: dataGeneration.m  run_closed_loop_simulation_overlay.py  run_closed_loop_simulation_sensor.py  run_closed_loop_simulation_vision.py  run_open_loop_simulation_overlay.py  run_open_loop_simulation_sensor.py  run_open_loop_simulation_vision.py  run_sensor_to_image_dataset.py  run_train_sensor_model.py  run_train_vision_model.py
sandbox/: sandbox_control.py
sandbox/acados/minimal_mpc/: minimal_mpc.py
sandbox/do_mpc/: oscillating_masses.py
sandbox/do_mpc/planar_quadrotor/: complexity_level_1.py  complexity_level_2.py  complexity_level_3.py
slurm/: control_sensor.sh  control_vision.sh  train_CLC_gpu_full.sh  train_CLC_gpu_slice.sh  train_JZ_gpu_a100.sh  train_JZ_gpu_v100.sh
src/KSIC/closed_loop_eval/: control_init.py  runner.py  state_renderer.py
src/KSIC/data_pipeline/: __init__.py
src/KSIC/model_learning/: ground_truth.py  run_setup.py  sensor_compute_losses.py  vision_compute_losses.py
src/KSIC/models/: __init__.py  base_koop_model.py  checkpoints.py  factory.py  koop_dynamics_base.py  koop_dynamics_standard.py  koop_dynamics_structured.py  sensor_koop_model.py  vision_koop_model.py
src/KSIC/open_loop_eval/: __init__.py
src/KSIC/rendering/: create_snapshots_figure.py  render_step.py  render_trajectory_sequence.py
src/KSIC/utils/: config_utils.py  logging_utils.py  path_utils.py  (+1 more)
(+215 files in other folders)
