[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KSIC_v6"
version = "1.0.0"
description = "System identification and control using Koopman representations of a planar quadrotor (with sensor data or visual data)."
readme = "README.md"
authors = [
  { name = "Bongiovanni", email = "bongiovanni@i3s.unice.fr" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "torch",
  "scipy",
  "tqdm",
  "do-mpc==4.6.5",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "casadi",
  "torchinfo"
]

[project.urls]
Homepage = "https://github.com/NBongiovanni/KSIC_v6.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
myproj-train = "KSIC_v6.main:cli"
